UPDATE book_create.html and css

--- a/templates/book/book_create.html
+++ b/templates/book/book_create.html
@@ -1,84 +1,121 @@
 {% extends "base.html" %}
 {% load static %}
 {% block styles %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/change_account_info.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/book_create.css' %}">
 {% endblock %}
 {% block content %}
 <script language="JavaScript">
-        function getSelectValue(frm)
-        {
-            frm.textValue.value = frm.selectBox.options[frm.selectBox.selectedIndex].text;
-            frm.optionValue.value = frm.selectBox.options[frm.selectBox.selectedIndex].value;
-        }
- </script>
+    function getSelectValue(frm) {
+        frm.textValue.value = frm.selectBox.options[frm.selectBox.selectedIndex].text;
+        frm.optionValue.value = frm.selectBox.options[frm.selectBox.selectedIndex].value;
+    }
+</script>
 
-{% if user.is_authenticated %}
-<div class="row">
-    <a class="book_create_intro" href="{% url 'book:index' %}"> 전공책 등록하기 </a>
-    <div class="col">
-        <form id="form_book" class="form_book" action=" " method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            <!--{{ form.as_p }}-->
-            <p>
-            <label for="id_title" id="book_title">제목</label>
-            <input type="text" class="book_title_input" name="title" placeholder="제목을 입력해 주세요." maxlength="50" required id="id_title">
-            </p>
-            <p>
-            <label for="id_writer" id="book_writer">저자</label>
-            <input type="text" class="book_writer_input" maxlength="50" name="writer" required id="id_writer">
-            </p>
-            <p>
-            <label for="id_text" id="book_text">게시글</label>
-            <textarea name="text" class="book_text_input" form="form_book" cols="40" rows="5" placeholder="내용을 입력해 주세요." required id="id_text" ></textarea>
-                <!--<input type="text" name="text" maxlength="50" required id="id_text">-->
-            </p>
-            <p>
-            <label for="id_image" id="book_image">이미지</label>
-            <input type="file" class="book_image_input" name="image" required id="id_image">
-            </p>
-            <p>
-            <label for="id_lecture" id="book_lecture">수업</label>
-            <input type="text" class="book_lecture_input" name="lecture" maxlength="100" required id="id_lecture">
-            </p>
-            <p>
-            <label id="book_state">도서 상태</label>
-                <input type="radio" name="state" value="하">하
-                <input type="radio" name="state" value="보통">보통
-                <input type="radio" name="state" value="상">상
-                <input type="radio" name="state" value="최상">최상
-            </p>
-            <p>
-            <label for="id_price" id="book_price">가격</label>
-                <input type="number" class="book_price_input" name="price" min="0" required id="id_price">
-                <!--<input type="checkbox" name="freebox" onchange="">무료 나눔-->
-            </p>
-            <p>
-            <label for="id_chatting" id="book_chatting">오픈채팅 주소</label>
-            <input type="url" class="book_chatting_input" name="kakaoUrl" required id="id_chatting">
-            </p>
-            <p>
-            <label for="id_major" >전공 카테고리</label>
-            <!--<input type="hidden" name="major_category">-->
-            <select name="major_category" form="form_book" id="id_major">
-                <option value="전체" selected>전체</option>
-                <optgroup label="원전공">
-                <option value="{{user.first_major}}"> {{user.first_major}} </option>
-                </optgroup>
-                <optgroup label="다/부전공">
-                    {% if user.second_major != "" %}
+<div class="content">
+    <h2>
+        도서 등록하기
+        <hr>
+    </h2>
+    <form id="form_book" class="form_book" action=" " method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {% include "form_errors.html" %}
+        <div class="rows">
+            <div class="col1">
+                <input type="text" class="book_title_input text_input" name="title" placeholder="제목" maxlength="50"
+                    required id="id_title" autocomplete="off">
+            </div>
+            <div class="col2">
+                <input type="text" class="book_writer_input text_input " autocomplete="off" maxlength="50"
+                    placeholder="저자" name="writer" required id="id_writer">
+            </div>
+        </div>
+
+        <div class="rows">
+            <div class="col1">
+                <label for="id_major">전공 카테고리</label>
+                <select name="major_category" form="form_book" id="id_major">
+                    <option value="전체" selected>전체</option>
+                    <optgroup label="원전공">
+                        <option value="{{user.first_major}}"> {{user.first_major}} </option>
+                    </optgroup>
+                    <optgroup label="다/부전공">
+                        {% if user.second_major != "" %}
                         <option value="{{user.second_major}}"> {{user.second_major}} </option>
-                    {% endif %}
-                    {% if user.third_major != "" %}
+                        {% endif %}
+                        {% if user.third_major != "" %}
                         <option value="{{user.third_major}}"> {{user.third_major}} </option>
-                    {% endif %}
-                </optgroup>
-            </select>
-            </p>
-            <input type="submit" value="확인" class="btn_book_upload">
-            <button type="button" onclick="location.href='{% url 'book:index' %}'" class="btn_book_unload" >취소</button>
-        </form>
-  </div>
+                        {% endif %}
+                    </optgroup>
+                </select>
+            </div>
+            <div class="col2">
+                <label for="id_lecture" id="book_lecture">수업</label>
+                <input type="text" class="book_lecture_input text_input" autocomplete="off" name="lecture"
+                    maxlength="100" required id="id_lecture">
+            </div>
+        </div>
 
+        <div class="rows">
+            <label>도서 상태</label>
+            <div class="state">
+                <hr class="gradation_line">
+                <label class="state_btn">
+                    <input type="radio" name="state" value="하">
+                    <span class="checkmark gradation1"></span>
+                    하
+                </label>
+                <label class="state_btn">
+                    <input type="radio" name="state" value="중">
+                    <span class="checkmark gradation2"></span>
+                    보통
+                </label>
+                <label class="state_btn">
+                    <input type="radio" name="state" value="상">
+                    <span class="checkmark gradation3"></span>
+                    상
+                </label>
+                <label class="state_btn">
+                    <input type="radio" name="state" value="최상">
+                    <span class="checkmark gradation4"></span>
+                    최상
+                </label>
+            </div>
+        </div>
+
+        <div class="rows">
+            <label for="id_price" id="book_price">가격</label>
+            <div>
+                <input type="number" class="book_price_input text_input" autocomplete="off" name="price" min="0"
+                    required id="id_price">
+                <label class="free_btn">
+                    <input class="book_price_input freebox" name="freebox" onchange="" type="checkbox">
+                    <span class="checkmark2"></span>무료나눔
+                </label>
+            </div>
+        </div>
+
+        <div class="rows">
+            <label>사진 및 게시글(선택)</label>
+            <div class="book_image">
+                <label class="book_image_input" for="id_image">+</label>
+                <input type="file" class="" name="image" required id="id_image" hidden="true" accept="image/*">
+            </div>
+            <div class="book_text">
+                <textarea name="text" class="book_text_input" form="form_book" cols="40" rows="5"
+                    placeholder="여기에 입력해 주세요." required id="id_text"></textarea>
+            </div>
+        </div>
+
+        <div class="rows">
+            <label for="id_chatting" id="book_chatting">오픈채팅 주소</label>
+            <input type="url" class="book_chatting_input text_input" autocomplete="off" name="kakaoUrl" required
+                id="id_chatting">
+        </div>
+        <div class="btns">
+            <input type="submit" value="등록하기" class="btn_book_upload btn">
+            <button type="button" onclick="location.href='{% url 'book:index' %}'"
+                class="btn_book_unload btn">취소</button>
+        </div>
+    </form>
 </div>
-{% endif %}
 {% endblock %}
