--- a/templates/user/my_page_header.html
+++ b/templates/user/my_page_header.html
@@ -3,7 +3,7 @@
     <hr>
 </h2>
 <div class="my_page_header">
-    <a id="active1" href="">
+    <a id="active1" href="{% url 'user:my_posts' %}">
         게시물 관리
         <hr>
     </a>
