--- a/templates/book/book_list.html
+++ b/templates/book/book_list.html
@@ -31,10 +31,12 @@ function changeMajorSelect(){
         window.location.href = url3;
     }
 }
+function changeFilter(){
+    document.getElementById("hidden-form-submit").click();
+}
 </script>
 
 <div class="container">
-
     <form action="{% url 'book:search' %}" method="post"> {% csrf_token %}
         <input class="search_input" type="search" placeholder="     도서 검색 (수업, 책제목, 저자 등)" name="q" value="{{q}}">
         <button type="submit" class="btn_search" > <img src="{% static 'img/search_btn.png' %}" alt="" height="45" width="43"> </button>
@@ -53,7 +55,23 @@ function changeMajorSelect(){
     </select>
     </form>
     <hr id="line_major_bar">
-    <div class="filtering-box"> 필터링</div>
+    <form action="{% url 'book:index' %}" method="get" id="filter-form">
+        <div class="filtering-box">
+            {% if "free" in search_type %}
+            <input class="form-check-input" type="checkbox" checked value="free" name="search-type" onchange="changeFilter()"> 무료나눔
+            {% endif %}
+            {% if "free" not in search_type %}
+            <input class="form-check-input" type="checkbox" value="free" name="search-type" onchange="changeFilter()" >  무료나눔
+            {% endif %}
+            {% if "deal" in search_type %}
+            <input class="form-check-input" type="checkbox"  checked value="deal" name="search-type"  onchange="changeFilter()" > 거래중
+            {% endif %}
+            {% if "deal" not in search_type %}
+             <input class="form-check-input" type="checkbox"  value="deal" name="search-type"  onchange="changeFilter()" > 거래중
+            {% endif %}
+        </div>
+        <button id="hidden-form-submit" type="submit" hidden>제출</button>
+    </form>
 
 <table id="book_table">
     <thead>
@@ -77,7 +95,13 @@ function changeMajorSelect(){
                     <td><div style="font-size: 22px;">{{ object.title|truncatechars:30 }}</div> <br> <div style="font-weight: normal;"> 저자: {{ object.writer }}</div> </td>
                     <td> <div style="font-weight: normal;">{{ object.major_category }}</div> <br> <div style="font-size: 21px;"> {{ object.lecture }}</div> </td>
                     <td> {{ object.state }}  </td>
-                    <td>{{ object.price }}₩  </td>
+                    <td>
+                        {% if object.price == 0 %}
+                            무료나눔
+                        {% else %}
+                            {{ object.price }}₩
+                        {% endif %}
+                    </td>
                     <td>
                         {% if object.deal_flag == 1 %} 거래중 {% endif %}
                         <div style="color:#ADADAD;">{% if object.deal_flag == 0 %} 거래완료 {% endif %}</div>
@@ -95,7 +119,7 @@ function changeMajorSelect(){
     </tbody>
     </table>
 </div>
-
+<!--
     {% if is_paginated %}
     <div class="wrap_pagination">
 <ul class="pagination">
@@ -127,6 +151,6 @@ function changeMajorSelect(){
     </li>
     {% endif %}
 </ul>
-    </div>
+    </div> -->
 {% endif %}
 {% endblock %}
