--- a/templates/book/book_search.html
+++ b/templates/book/book_search.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
-{% block styles %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/change_account_info.css' %}">
-{% endblock %}
+
 {% block content %}
+<div>
+{% include 'book/major_navbar.html'%}
 <table id="book_table">
     <a href="{% url 'book:index' %}" class="back_to_post"><  리스트 목록으로</a>
     <tbody>
@@ -14,6 +14,7 @@
     {% else %}
 
     {% for book in books.all %}
+
         <tr class="text-center">
             <td><a href="{% url 'book:detail' book.id %}"><img src=" {{ book.image.url }}" class="book_list_img" alt="..."></a></td>
             <td><a href="{% url 'book:detail' book.id %}" class="book_list_title">{{ book.title|truncatechars:30 }}</a>
@@ -22,6 +23,6 @@
     {% endfor %}
     {% endif %}
     </tbody>
-    </div>
 </table>
-{% endblock %}}
+</div>
+{% endblock %}
