--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,6 +6,10 @@
 /* ------------------------------------------- */
 
 /* 제목: 공지사항, 마이페이지, 로그인, 로그아웃 */
+.heading{
+    margin-bottom:3rem;
+}
+
 h1{
     font-weight: 600;
     font-size: 2.25rem;
@@ -21,3 +25,42 @@ h1>hr{
 }
 
 /* ------------------------------------------- */
+
+/* input type:text */
+
+input[type=text],input[type=password]{
+    font-weight: 600;
+    font-size: 1.25rem;
+    padding:0.5em 0.5em;
+    border-radius: 10px;
+    border:none;
+    background: #F2F2F2;
+    width: 100%;
+}
+
+input[type=text]::placeholder,input[type=password]::placeholder {
+    color: #9C9C9C;
+}
+
+input:focus{
+    outline: none;
+}
+
+.submit_btn{
+    background: #FB8F1D;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+    border:none;
+    font-weight: 600;
+    font-size: 1.5rem;
+    text-align: center;
+    color: #FFFFFF;
+    width:12.75em;
+    height: 2.3em;
+}
+
+/* ------------------------------------------- */
+header{
+    height: 9em;
+    display: flex;   
+}
