--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,100 +1,27 @@
 .container{
-    width:500px;
-    margin:150px auto;
-    /* background-color: rgb(135, 135, 151); */
-}
-
-.heading{
-    margin-bottom:70px;
-}
-
-h1>hr{
-    margin-left:0;
-    width: 40px;
-    height: 2.5px;
-    background: #4A4A4A;
-    border-radius: 4px;
-}
-
-h1{
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 36px;
-    color: #4A4A4A;
+    width:30rem;
+    margin:5rem auto;
 }
 
 .id, .pwd{
-    margin:20px 0px;
-}
-
-input{
-    width: 490px;
-    height: 50px;
-    background: #F2F2F2;
-    border-radius: 10px;
-    border:none;
-}
-.submit{
-    width: 306px;
-    height: 55px;
-    background: #FB8F1D;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
-    border:none;
-
-
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 24px;
-    text-align: center;
-
-    color: #FFFFFF;
+    margin:1.25rem 0px;
 }
 
 .button{
-    margin-top:50px;
+    margin-top:3rem;
     text-align: center;
 }
 
-.small_description{
-    margin-top:15px;
-
-    font-family: Inter;
-    font-style: normal;
+.if{
+    margin-top:1rem;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 1rem;
     text-align: center;
-
-    color: #797979;
 }
 
-form input::placeholder{
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 24px;
-    /* identical to box height */
 
-
-    color: #9C9C9C;
-}
-
-form input{
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 24px;
-    padding-left: 20px;
-}
-
-form input:focus{
-    outline: none;
-}
-
+/* modal 지우지 마세요*/
+/* 
 .modal_wrap{
     position:fixed;
     width:100%;
@@ -135,8 +62,6 @@ form input:focus{
 }
 
 form label{
-    font-family: Inter;
-    font-style: normal;
     font-weight: 600;
     font-size: 22px;
 
@@ -144,8 +69,6 @@ form label{
 }
 
 .close_btn{
-    font-family: Inter;
-    font-style: normal;
     font-weight: 600;
     font-size: 35px;
     float:right;
@@ -165,4 +88,4 @@ form label{
     height:100%;
     background: rgba(196, 196, 196, 0.31);
     position:absolute;
-}
+} */
