--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -1,4 +1,4 @@
- {% extends "base.html" %}
+{% extends "base.html" %}
 {% load static %}
 {% block styles %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/signup.css' %}">
@@ -6,28 +6,31 @@
 {% block content %}
 
 <div class="content">
-    <h2>회원가입<hr></h2>
+    <div class="heading">
+        <h1>회원가입<hr></h1>
+    </div>
+   
     <form method="POST" action="{% url 'user:signup' %}">
         {% csrf_token %}
         {% include "form_errors.html" %}
         <div class="form-group">
             <label for="username">닉네임</label><br>
-            <input type="text" class="full" name="username" id="username"
+            <input type="text" name="username" id="username"
                 value="{{ form.username.value|default_if_none:'' }}">
         </div>
         <div class="form-group">
             <label for="password1">비밀번호</label><br>
-            <input type="password" class="full" name="password1" id="password1"
+            <input type="password" name="password1" id="password1"
                 value="{{ form.password1.value|default_if_none:'' }}">
         </div>
         <div class="form-group">
             <label for="password2">비밀번호 확인</label><br>
-            <input type="password" class="full" name="password2" id="password2"
+            <input type="password" name="password2" id="password2"
                 value="{{ form.password2.value|default_if_none:'' }}">
         </div>
         <div class="form-group">
             <label for="email">이메일</label><br>
-            <input type="text" class="full" name="email" id="email" value="{{ form.email.value|default_if_none:'' }}">
+            <input type="text" name="email" id="email" value="{{ form.email.value|default_if_none:'' }}">
             <p class="email_description">건국대학교 이메일을 입력해주세요. 인증메일이 발송됩니다.</p>
         </div>
         <div class="form-group g_dob">
@@ -327,7 +330,7 @@
                 </div>
             </div>
         </div>
-        <button type="submit">가입하기</button>
+        <button class="submit_btn" type="submit">가입하기</button>
     </form>
 </div>
 {% endblock %}
